samples/_failures_safe/1761220904_deb5bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0231b333.c: In function ‘main’:
./samples/SAFE/__tmp_0231b333.c:162:5: error: expected declaration or statement at end of input
  162 |     }
      |     ^
